tests/baselines/reference/stringLiteralsWithSwitchStatements02.errors.txt
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements02.ts(8,5): error TS2367: The types of these values indicates that this condition will always be 'false'.
  Operator '==' cannot be applied to types '"foo"' and '"bar"'.
tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements02.ts(13,5): error TS2367: The types of these values indicates that this condition will always be 'true'.
  Operator '!=' cannot be applied to types '"foo"' and '"bar"'.


==== tests/cases/conformance/types/literal/stringLiteralsWithSwitchStatements02.ts (2 errors) ====
    let x: "foo";
    let y: "foo" | "bar";
    
    let b: boolean;
    b = x == y;
    b = "foo" == y
    b = y == "foo";
    b = "foo" == "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: The types of these values indicates that this condition will always be 'false'.
!!! error TS2367:   Operator '==' cannot be applied to types '"foo"' and '"bar"'.
    
    b = x != y;
    b = "foo" != y
    b = y != "foo";
    b = "foo" != "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: The types of these values indicates that this condition will always be 'true'.
!!! error TS2367:   Operator '!=' cannot be applied to types '"foo"' and '"bar"'.
    
    